# IITMandiHackathon

./: FILE_PREPROCESSING.ipynb  Landing.py  Model_with_normalized_features.pth  Model_with_punjabi_training.ipynb  README.md  Wav2vec_classifier_visualisation.ipynb  batch_chatbot_demo.py  bfs_scraper.py  chatbot_dep.py  clustering.py  corpus.json  frontend.py  getimages.py  misc.py  model_training_with_normalization.ipynb  myREADME.md  query_images.py  requirements.txt  structurify.py
10_matfixer/: README.md
10_matfixer/Backend1/: README.md  api_models.py  chat_api1.py  requirements.txt
10_matfixer/Backend2/: README.md  chat_api2.py  requirements.txt  smartapi.py
10_matfixer/app/: README.md  firebase.json  pubspec.yaml
32_VLMForTableUnderstanding/: Readme.md
32_VLMForTableUnderstanding/down/: error.py  finalserver.py  genHtml.py  htmltocsv_copy.py  htmltocsv_infer.py  inference.py  initialserver.py  pdf2cropimg_copy.py  stream.py  trueHtml.py  unitable_final_1.py
39_VeinScope/: README.md  metrics.py  stage1_training.ipynb  stage2_training.ipynb  test_notebook.ipynb  visual_pipeline.ipynb
39_VeinScope/backend/: main.py
39_VeinScope/stages/: disease_mapping.py  main.py  stage1.py  stage2.py
40_MoodFlixx/: README.md
App and other code/: code_38.py  index.html
App and other code/Node.js/: package-lock.json  package.json  server.js
App and other code/Python_code/: FFT_Calculations_wav.ipynb  Generate_FFT_From_files.ipynb  PyTorchModelTraining.ipynb  TrainModel.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  create_model.ipynb
App and other code/cgi-bin(Backend)/: Transformer_pipline2.py  Untitled.ipynb  Vgg_pipeline.py  cgi.py  lstm_full_94.h5  lstm_pipeline.py  lstm_pipeline1.py  predict_cgi.py  resnet.py  rsnt.py  test1
DL Models/50_adam_improved/: 50_adam_imp.py  pipline_adam.ipynb
DL Models/CNN_adam_60%_overfit/: evaluation_results.json  training_history.json
DL Models/LSTM/: Lstm_inference
DL Models/MobileNetV2_94%_advance_stat/: evaluation_results.json  stat_fake.py  training_history.json
DL Models/Model1_RSnet18_92%/: fake_true.py
DL Models/ResNet/: ResNet_pipline_92%.ipynb  inference_resnet.py
DL Models/Transformer/: Transformer_code  Transformer_inference
DL Models/VGG16/: Deepfake_Audio_Detection_Code (1).ipynb  VGG16_inference.ipynb
DL Models/transforamr_74%/: best_transformer_model.pt  evaluation_results.json  final_transformer_model.pt  performance_analysis.json  training_history.json  trans_10.py
Documentation/: Model.md  README.md
Group-2_Moodflixx/: .env  .gitignore  README.md  movie_recommender.db  requirements.txt  run.py  voice.py
Group-2_Moodflixx/CStrings/: generate_cstrings.py  iterative.py
Group-2_Moodflixx/KG/: KG_pipeline.py  (+6 more)
Group13_Voice of nation/: AWAZ2_app.py  CLS_FeedForward.py  Transformer_with_CLS.ipynb  WAVE2VECWITHOUTCLSFEEDFORWARD.py  model_uno_training.ipynb
Group26_CrowdFlow/: preprocess.py
Group28_CrowdFlowAI/: README.md
Group30_AI_Troubleshooter/: README.md
Group43_Truth or Trap: Fake Speech Detection Using Deep Learning/: README.md
Group8_PS6/: LICENSE  README.md  claude_desktop_config_example.json
Group_6_AI_Troubleshooter/: .env.example  .gitignore  README.md  main-streamlit.py  main.py  requirements.txt
Group_6_AI_Troubleshooter/MCP/matlab-troubleshooter/: matlab_troubleshooter.py  pyproject.toml
agents/: __init__.py  concise_agent.py  debugger_agent.py  evaluator_agent.py  intent_agent.py  planner_agent.py  verifier_agent.py  writer_agent.py
backend/: package-lock.json  package.json  wrangler.jsonc
data (json+index+raw csv)/: MATLAB (1).csv  clean_docs.jsonl  docs_chunks.jsonl  embeddings.npy  faiss.index  metadata.jsonl
data preprocessing/: chunk_docs.py  prep_matlab_docs.py
fakeit_webapp/: app.py
frontend/: config.js  package-lock.json  package.json  tailwind.config.js
group20_moodflix/: README.md  agent3.py  create_vector_store.py  data_preprocess.py
group41_VeinScope/: Readme.md  main.py  main_ai.py  unet_attention.py  unet_plus_attn.py
group42_CaptureSmartAI/: READNE.md
group_33/: chunking.py  feature_clusters.py  generate_csv.py  label_mapping.py  prepare_csv_dataset.py  split.py  test.py  test_prepared.csv  train.py  val.csv
grp12_Technologia/: readme.md
index_tools_build_and_retrieve/: build_index.py  retrieval.py
pages/: AdminPage.py  streamlit_chat_app.py
results/: batch_results.txt
sample questions/: Questions_List.txt
stores_mem_and_cache/: cache.py  memory.py
test scripts/: analyze_clean_docs.py  check_faiss.py  query_index_example.py  test_memory.py  test_pipeline.py  test_retrieval.py
unet_feat/: unet_feat_combined.py  unet_training_independent.py
utils/: gemini_wrapper.py  hayd.py  individualLinkScrap.py  ragas.py  rrr.py  scrapL1.py  scraped_links.csv  scraper_log.txt
web/: .gitattributes  app.py
(+233 files in other folders)
