[project]
name = "temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
    "acres>=0.3.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anthropic==0.49.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "backports-tarfile==1.2.0",
    "black==25.1.0",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "ci-info==0.3.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "configobj==5.0.9",
    "configparser==7.2.0",
    "coverage==7.8.0",
    "dataclasses-json==0.6.7",
    "deepeval==2.8.2",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "docutils==0.21.2",
    "duckduckgo-search==8.0.1",
    "etelemetry==0.3.1",
    "execnet==2.1.1",
    "faiss-cpu==1.11.0",
    "filelock==3.18.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.25.0rc0",
    "google-api-python-client==2.169.0",
    "google-auth==2.39.0",
    "google-auth-httplib2==0.2.0",
    "google-genai==1.13.0",
    "google-generativeai==0.8.5",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.1",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "isodate==0.6.1",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "keyring==25.6.0",
    "langchain==0.3.25",
    "langchain-community==0.3.23",
    "langchain-core==0.3.58",
    "langchain-huggingface==0.1.2",
    "langchain-openai==0.3.16",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.42",
    "looseversion==1.3.0",
    "lxml==5.4.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mcp[cli]>=1.7.1",
    "mdurl==0.1.2",
    "monotonic==1.6",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nh3==0.2.21",
    "nibabel==5.3.2",
    "nipype==1.10.0",
    "numpy==2.2.5",
    "ollama==0.4.8",
    "openai==1.77.0",
    "opentelemetry-api==1.32.1",
    "opentelemetry-exporter-otlp-proto-common==1.32.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.32.1",
    "opentelemetry-proto==1.32.1",
    "opentelemetry-sdk==1.32.1",
    "opentelemetry-semantic-conventions==0.53b1",
    "orjson==3.10.18",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathlib==1.0.1",
    "pathspec==0.12.1",
    "pillow==11.2.1",
    "pkginfo==1.10.0",
    "platformdirs==4.3.7",
    "pluggy==1.5.0",
    "portalocker==3.1.1",
    "posthog==3.25.0",
    "primp==0.15.0",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "prov==2.0.1",
    "puremagic==1.29",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pydot==3.0.4",
    "pygments==2.19.1",
    "pymupdf==1.25.5",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-repeat==0.9.4",
    "pytest-rerunfailures==12.0",
    "pytest-xdist==3.6.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pywin32==310",
    "pywin32-ctypes==0.2.3",
    "pyxnat==1.6.3",
    "pyyaml==6.0.2",
    "rank-bm25==0.2.2",
    "rdflib==6.3.2",
    "readme-renderer==44.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==13.9.4",
    "rsa==4.9.1",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==4.1.0",
    "sentry-sdk==2.27.0",
    "shellingham==1.5.4",
    "simplejson==3.20.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tenacity==9.0.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "traits==7.0.2",
    "transformers==4.51.3",
    "twine==5.1.1",
    "typer==0.15.3",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "yarl==1.20.0",
    "zipp==3.21.0",
    "zstandard==0.23.0",
]
